Create main webpage to house embedded visualizations
Rather than displaying only one map or visualization at a time, I've
created a (rudimentary) main page to display multiple visualization via
iframes.

--- a/map_viz.ipynb
+++ b/map_viz.ipynb
@@ -1862,7 +1862,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m.save(\"index.html\")"
+    "m.save(\"rate.html\")"
    ]
   }
  ],
